@@ -25,9 +25,11 @@
         <div class="row">
             <div class="col-4"></div>
             <div class="col-4">
+                <h3>Database Details</h3>
                 <form class="installForm" action="installAction.php" method="post">
-                    Location: <input type="text" name="location"><br>
+                    Host: <input type="text" name="host"><br>
                     Name: <input type="text" name="dbName"><br>
+                    User: <input type="text" name="dbUser"><br>
                     Password: <input type="text" name="dbPass"><br>
                     <input class="submitBTN" type="submit">
                 </form>
